--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@nextui-org/react": "^1.0.0-beta.9",
+    "date-fns": "^2.29.1",
+    "firebase": "^9.9.2",
     "next": "12.2.3",
+    "next-pwa": "^5.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -19,6 +24,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
     "typescript": "4.7.4"
   }
 }
