--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@nextui-org/react": "^1.0.0-beta.9",
     "date-fns": "^2.29.1",
     "firebase": "^9.9.2",
-    "next": "12.2.3",
-    "next-pwa": "^5.5.5",
+    "next": "12.2.4",
+    "next-pwa": "5.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -22,9 +22,13 @@
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.21.0",
     "eslint-config-next": "12.2.3",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.4.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
     "typescript": "4.7.4"
   }
