--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.1",
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@heroicons/react": "^1.0.6",
-    "@nextui-org/react": "^1.0.0-beta.9",
+    "@mui/material": "^5.10.0",
     "date-fns": "^2.29.1",
     "firebase": "^9.9.2",
     "next": "12.2.4",
@@ -30,6 +34,7 @@
     "eslint-import-resolver-typescript": "^3.4.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
+    "sass": "^1.54.4",
     "typescript": "4.7.4"
   }
 }
