--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "date-fns": "^2.29.1",
     "firebase": "^9.9.2",
     "next": "12.2.4",
-    "next-pwa": "5.5.4",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
