--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.10.1",
-    "@emotion/react": "^11.10.0",
+    "@emotion/cache": "^11.10.3",
+    "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@heroicons/react": "^1.0.6",
-    "@mui/material": "^5.10.0",
-    "date-fns": "^2.29.1",
-    "firebase": "^9.9.2",
-    "next": "12.2.4",
+    "@emotion/styled": "^11.10.4",
+    "@heroicons/react": "^2.0.10",
+    "@mui/material": "^5.10.3",
+    "date-fns": "^2.29.2",
+    "firebase": "^9.9.3",
+    "next": "^12.2.5",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.6.3",
-    "@types/react": "18.0.15",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.18",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "eslint": "^8.21.0",
-    "eslint-config-next": "12.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "eslint": "^8.23.0",
+    "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.4.0",
+    "eslint-import-resolver-typescript": "^3.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
-    "sass": "^1.54.4",
-    "typescript": "4.7.4"
+    "sass": "^1.54.8",
+    "typescript": "^4.8.2"
   }
 }
