--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
-    "@mdi/js": "^7.0.96",
-    "@mdi/react": "^1.6.1",
     "@mui/material": "^5.10.3",
     "date-fns": "^2.29.2",
     "firebase": "^9.9.3",
+    "mdi-material-ui": "^7.5.0",
     "next": "^12.2.5",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
