--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.10.3",
-    "@emotion/react": "^11.10.4",
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.3",
-    "date-fns": "^2.29.2",
-    "firebase": "^9.9.3",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.4",
+    "date-fns": "^2.29.3",
+    "firebase": "^9.15.0",
     "mdi-material-ui": "^7.5.0",
-    "next": "^12.2.5",
+    "next": "^13.1.2",
     "next-pwa": "^5.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.7.14",
-    "@types/react": "^18.0.18",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "eslint": "^8.23.0",
-    "eslint-config-next": "^12.2.5",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.0",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.2",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1",
-    "sass": "^1.54.8",
-    "typescript": "^4.8.2"
+    "prettier": "^2.8.2",
+    "sass": "^1.57.1",
+    "typescript": "^4.9.4"
   }
 }
