--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
+    "@iconify/react": "^4.0.1",
     "@mui/material": "^5.11.4",
     "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
