--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.5",
     "@iconify/react": "^4.0.1",
     "@mui/material": "^5.11.4",
+    "@mui/x-date-pickers": "^6.0.3",
     "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
     "mdi-material-ui": "^7.5.0",
