--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "theme_color": "#7635dc",
+  "theme_color": "#1e1d49",
   "background_color": "#f3f5f7",
   "display": "standalone",
   "start_url": "/",
