--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,11 +3,17 @@
   "background_color": "#f3f5f7",
   "display": "standalone",
   "start_url": "/",
-  "name": "Expense Manager",
-  "short_name": "Expense Manager",
-  "description": "An Expense Manager App by Nine Technology",
+  "name": "Xpense Tracker",
+  "short_name": "Xpense",
+  "description": "An Expense Tracker App by Nine Technology",
   "orientation": "portrait",
   "icons": [
+    {
+      "src": "assets/icons/icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
     {
       "src": "assets/icons/icon-72x72.png",
       "sizes": "72x72",
@@ -45,8 +51,8 @@
       "purpose": "maskable any"
     },
     {
-      "src": "assets/icons/icon-384x384.png",
-      "sizes": "384x384",
+      "src": "assets/icons/icon-256x256.png",
+      "sizes": "256x256",
       "type": "image/png",
       "purpose": "maskable any"
     },
